--- a/practica 67.html
+++ b/practica 67.html
@@ -2708,7 +2708,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ejemplo de JavaScript</title>
+        <title>practica 67</title>
         <meta charset="UTF-8">
     </head>
     <body>
